--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "postcss": "^8.4.24",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.3.2",
     "vite": "^3.0.9"
   }
 }
