--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.2",
+    "animate.css": "^4.1.1",
     "gsap": "^3.12.1",
     "vue": "^3.2.38"
   },
