--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.7.0",
     "@vueuse/core": "^10.1.2",
     "animate.css": "^4.1.1",
     "gsap": "^3.12.1",
