15-how-to-animate-on-scroll-in-vue-with-vueuse-motion

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.7.0",
     "@vueuse/core": "^10.1.2",
+    "@vueuse/motion": "^2.0.0",
     "animate.css": "^4.1.1",
     "gsap": "^3.12.1",
     "vue": "^3.2.38"
